bug fixed; deleted unnecessary test class; implemented tests for main functionality